--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   path: ^1.8.3
   connectivity_plus: ^6.1.3
   table_calendar: ^3.0.5
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
