--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   permission_handler: ^11.4.0
   geolocator_android: ^4.6.1
+  shared_preferences: ^2.0.6
 
 
 dev_dependencies:
